fix collapse

--- a/src/app/sass/base/_bootstrap_custom.scss
+++ b/src/app/sass/base/_bootstrap_custom.scss
@@ -1,3 +1,9 @@
+@media (min-width: 768px){
+	.navbar-collapse {
+	    overflow-x: hidden !important;
+	}
+}
+
 .btn{
     box-shadow: 0 1px 3px rgba(0,0,0,0.2); 
 }
